[package]
name = "utoipa_sample"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
tracing-subscriber = "0.3.19"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"] }
